--- a/ToolshopApp2/App.xaml
+++ b/ToolshopApp2/App.xaml
@@ -7,6 +7,6 @@
     <!--StartupUri="View/MainWindow.xaml"-->
     
     <Application.Resources>
-         
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Application.Resources>
 </Application>
