--- a/ToolshopApp2/View/UserControlers/MainWindowControllers/CalendarViewUserControl.xaml
+++ b/ToolshopApp2/View/UserControlers/MainWindowControllers/CalendarViewUserControl.xaml
@@ -17,12 +17,12 @@
             <ColumnDefinition Width="220*"/>
             <ColumnDefinition Width="220*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="_Button_Wk_down" Content="-" HorizontalAlignment="Left" VerticalAlignment="Top" Width="41" Height="33" Click="_Button_Wk_down_Click"/>
+        <Button x:Name="_Button_Wk_down" Content="-" HorizontalAlignment="Left" VerticalAlignment="Top" Width="41" Height="33" Click="_Button_Wk_down_Click" Background="#FF474747" Foreground="White" BorderBrush="White"/>
         <TextBox x:Name="_Textbox_Week" HorizontalAlignment="Left" Height="33" Margin="41,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="50" FontSize="20" MaxLength="2" MaxLines="1" IsEnabled="False" TextChanged="_Textbox_Week_TextChanged"/>
-        <Button x:Name="_Button_wk_up" Content="+" HorizontalAlignment="Left" Margin="160,0,0,0" VerticalAlignment="Top" Width="40" Height="33" Click="_Button_wk_up_Click" />
-        <Button x:Name="_Button_bt_actual_wk" Content="Current week" HorizontalAlignment="Left" VerticalAlignment="Top" Width="78" Height="33" Grid.Column="1" Click="_Button_bt_actual_wk_Click" />
+        <Button x:Name="_Button_wk_up" Content="+" HorizontalAlignment="Left" Margin="160,0,0,0" VerticalAlignment="Top" Width="40" Height="33" Click="_Button_wk_up_Click" Background="#FF474747" Foreground="White" BorderBrush="White"/>
+        <Button x:Name="_Button_bt_actual_wk" Content="Current week" HorizontalAlignment="Left" VerticalAlignment="Top" Width="78" Height="33" Grid.Column="1" Click="_Button_bt_actual_wk_Click" Background="#FF474747" Foreground="White" BorderBrush="White"/>
         <TextBox x:Name="_Textbox_Year_Selected" HorizontalAlignment="Left" Height="33" Margin="91,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="69" FontSize="20" MaxLines="1" MaxLength="4" IsEnabled="False" />
-        <Button x:Name="_Button_Refresh_Callendar" Click="_Button_Refresh_Callendar_Click" Content="Refresh" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Height="33" Grid.Column="1" Margin="78,0,0,0" />
+        <Button x:Name="_Button_Refresh_Callendar" Click="_Button_Refresh_Callendar_Click" Content="Refresh" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Height="33" Grid.Column="1" Margin="78,0,0,0" Background="#FF474747" Foreground="White" BorderBrush="White"/>
 
         <DataGrid x:Name="_DataGridMonday" Margin="0,28,0,0" CanUserAddRows="False" Background="#FF3A3A3A" MouseDoubleClick="_DataGridAllRequestsMouseDoubleClick" AutoGenerateColumns="False" Grid.Row="1">
             <DataGrid.RowStyle>
