--- a/ToolshopApp2/View/UserControlers/TaskWindowControllers/TaskControlersUserControl.xaml
+++ b/ToolshopApp2/View/UserControlers/TaskWindowControllers/TaskControlersUserControl.xaml
@@ -3,13 +3,41 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ToolshopApp2.View.UserControlers"
-             mc:Ignorable="d" Height="46" Width="457">
+             xmlns:local="clr-namespace:ToolshopApp2.View.UserControlers"             
+             mc:Ignorable="d" FontSize="18">
     <Grid>
-        <Button x:Name="_AddRequest" Click="_AddRequestClick" Content="Add New Request" Margin="0,0,10,10" Height="26" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="104"  Grid.Column="1"  />
-        <Button x:Name="_ButtonAttachFile" Click="_ButtonAttachFile_Click" Content="Attach File" Margin="0,0,119,10" Height="26" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="104"  Grid.Column="1"/>
-        <CheckBox x:Name="_CheckBoxAttachement" Content="Attachement" HorizontalAlignment="Right" Margin="0,0,228,10" Width="109" Background="White" Foreground="White" Height="26" VerticalAlignment="Bottom" IsEnabled="False" Grid.Column="1"/>
-        <Button x:Name="_ButtonOpenAttachments" Click="_ButtonOpenAttachments_Click" Content="Open Attachments" HorizontalAlignment="Right" Margin="0,0,342,10" Width="110" Height="26" VerticalAlignment="Bottom"/>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <CheckBox Grid.Column="1" Grid.Row="0" Margin="0 10" x:Name="_CheckBoxAttachement" MinWidth="100" Background="White" Foreground="White" VerticalAlignment="Bottom" IsEnabled="False">
+            Attached
+        </CheckBox>
+        <Button Grid.Column="2" Grid.Row="0" Margin="10" x:Name="_ButtonOpenAttachments" Click="_ButtonOpenAttachments_Click" MinWidth="120" MinHeight="30" Background="#FF474747" Foreground="White" BorderBrush="White" BorderThickness="2">
+            Open Attachments
+        </Button>
+        <Button Grid.Column="3" Grid.Row="0" Margin="10" x:Name="_ButtonAttachFile" Click="_ButtonAttachFile_Click" MinWidth="120" MinHeight="30" Background="#FF474747" Foreground="White" BorderBrush="White" BorderThickness="2">
+            Attach File
+        </Button>
+        <Button Grid.Column="4" Grid.Row="0" Margin="10" x:Name="_ButtonGeneratePIC" Click="_ButtonGeneratePIC_Click" MinWidth="120" MinHeight="30" Background="#FF474747" Foreground="White" BorderBrush="White" BorderThickness="2">
+            Generate PIC
+        </Button>
+        <Button Grid.Column="0" Grid.ColumnSpan="6" Grid.Row="1" x:Name="_CloseWindowButton" Click="_CloseWindowButton_Click" MinWidth="120" MinHeight="50" Margin="10 0 10 10" Background="#FF474747" Foreground="White" BorderBrush="White" BorderThickness="3" FontWeight="Bold" FontSize="18">
+            Close Request Window
+        </Button>
+        <Button Grid.Column="0" Grid.ColumnSpan="6" Grid.Row="2" x:Name="_AddRequest" Click="_AddRequestClick" MinWidth="120" MinHeight="50" Margin="10 0 10 0" Background="#FF474747" Foreground="White" BorderBrush="White" BorderThickness="3" FontWeight="Bold" FontSize="18">
+            Add Request
+        </Button>
     </Grid>
 </UserControl>
